Dockerfile and logging update
* less logging for prod profile
* add cmd flags to run config in dockerfile